--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "private": true,
   "dependencies": {
     "antd": "^3.25.2",
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.9.1",
+    "http-proxy-middleware": "^2.0.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "react": "^16.12.0",
+    "nprogress": "^0.2.0",
+    "react": "^17.0.2",
     "react-app-rewired": "^2.1.5",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -34,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
