--- a/package.json
+++ b/package.json
@@ -3,24 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "antd": "^3.25.2",
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.9.1",
+    "dayjs": "^1.10.6",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "http-proxy-middleware": "^2.0.1",
+    "jsonp": "^0.2.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-thunk": "^1.0.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "screenfull": "^5.1.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
